grafana/05.grafana-service-dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: grafana-service
  namespace: gallery
spec:
  host: grafana-service
  trafficPolicy:
    tls:
      mode: DISABLE
